<resources>
    <string name="app_name">Percakapan 3 Bahasa</string>
    <string name="isi">Pada era sekarang berita menjadi "menu" utama dalam deretan makanan harian "empat sehat lima sempurna". Tiada hari tanpa berita. Dari waktu ke waktu, detik demi detik, berita datang silih berganti. Beragam informasi terus berhamburan memenuhi ruang kehidupan kita setiap harinya. Dengan banyaknya sajian berita, baik melalui media cetak maupun elektronik, kita harus bisa memanfaatkannya dengan baik.\n\n Pemahaman terhadap struktur dan kaidah teks berita memudahkan kita dalam mengolahnya menjadi sesuatu yang lebih bermanfaat. Berita-berita tersebut berperan sebagai sumber ilmu pengetahuan dan penambah wawasan. Ada pepatah, seseorang yang menguasai berita (informasi), dialah yang akan menguasai dunia.</string>
    <string name="isi2">Sepuluh hari menjelang Lebaran, Sabtu (15/11), Pelabuhan Penyeberangan Merak mulai dipadati truk. Truk-truk tersebut mengangkut barang nonsembilan bahan pokok (non sembako).\n\n
Tingginya arus truk dalam dua hari terakhir berkaitan dengan adanya larangan melintas bagi truk nonsembilan bahan pokok (non sembako) pada tanggal 21–25 November. Larangan tersebut berlaku bagi truk bersumbu lebih dari dua. Truk gandengan, truk tempelan, dan truk kontainer.\n\n
Penumpukan truk bersumbu dua tersebut seperti di Pelabuhan Merak menyebabkan antrean truk sekitar 100 meter dari pintu masuk kapal. Antrean terjadi di dermaga satu hingga dermaga empat. Tetapi, antrean tersebut  masih dalam batas normal. Antrean belum membeludak ke luar area parkir pelabuhan. Akan akibat penumpukan truk itu, beberapa sopir truk mengaku harus menunggu sekitar dua hingga empat hari untuk bisa masuk kapal. (Sumber: Kompas dengan beberapa penyesuaian)
</string>
    <string name="isi3">Perhatikan kembali teks tentang peristiwa menjelang Lebaran pada bagian sebelumnya. Teks tersebut ternyata memiliki unsur-unsur sebagai berikut
    </string>
    <string name="isi4">Setelah mempelajari materi, kamu diharapkan mampu :\n
1.	Meringkas pokok-pokok isi berita yang dibaca dan didengar\n
2.	Menyimpulkan pokok-pokok isi berita yang dibaca dan didengar\n
3.	Memberikan tanggapan berdasarkan berita yang dibaca dan didengar.\n

    </string>
    <string name="isi5">Pelabuhan Merak dipadati oleh truk-truk pengangkut barang nonsembako pada sepuluh hari menjelang Lebaran, Sabtu (15/11). Kondisi tersebut disebabkan adanya larangan melintas bagi truk nonsembako pada tanggal 21–25 November.
    </string>
    <string name="isibab6">Pernahkah kamu terbujuk atau membujuk orang untuk berbuat sesuatu? Nah, itu artinya kamu sudah cukup akrab dengan hal-hal yang persuasif. Itu berarti pula teks persuasi bukan lagi hal yang asing bagi kehidupan kamu sehari- hari. Bahkan, kemampuan untuk bisa memengaruhi orang (berpersuasi) sangat penting kamu kuasai, misalnya dalam kegiatan berbicara di depan umum.
\n\nDalam bab ini kamu akan memahami dan menelaah struktur teks persuasi. Dengan begitu, kamu pun akan mudah pula di dalam mempersuasi orang lain, untuk bersama-sama berbuat sesuatu yang bermanfaat tentu saja.
    </string>
    <string name="isi2bab6">Setelah mempelajari materi ini, kamu diharapkan mampu: Menelaah saran, ajakan, arahan, dan pertimbangan atas permasalahan aktual dari teks persuasi yang kamu dengar dan baca
    </string>
    <string name="isi3bab6">Terus terang, saya merindukan teenlit yang berani jujur, wajar, dan otentik. Sebuah tontonan yang mengekspresikan kemiskinan dengan kemiskinan, kelas menengah secara menengah, orang kaya sebagai orang kaya, pelajar sebagai pelajar, dan remaja sebagai remaja. "Kartini-Kartini" di SMA bukan lagi mereka yang hanya sibuk dengan penampilan, pamer barang mewah, menguber kekasih, hingga lupa pada semangat keindonesiaan dan upaya mengejar kepintaran seperti telah ditunjukkan R.A. Kartini. Untunglah, Kartini yang terkenal dengan semangat patriotiknya, tak sempat menyaksikan teenlit. Saya tak tega menyaksikan air matanya menitik.
    </string>
    <string name="isi4bab6">Secara tidak langsung, teks tersebut menyampaikan ajakan kepada pembaca. Ajakan ditujukan kepada pelaku-pelaku dunia perfilman untuk membuat tontonan (sinetron) teenlit yang jujur, wajar, dan otentik. Penulis juga berharap agar tontonan-tontonan itu tidak melupakan semangat keindonesiaan dan dapat mengejar kepintaran sebagaimana yang telah ditunjukkan oleh R.A. Kartini.
\n\nDengan karakteristik tersebut, teks di atas digolongkan ke dalam teks persuasif.  Teks tersebut  berisi  ajakan  atau  bujukan.  Pernyataan-pernyataan di dalam teks tersebut mendorong seseorang untuk mengikuti harapan atau keinginan-keinginan penulis. Sebagai tulisan yang bersifat ajakan, pernyataan- pernyataan di dalam teks tersebut cenderung "mempromosikan" sesuatu yang diperlukan pembaca.
\n\nPerhatikan pula teks berikut!
    </string>
    <string name="isi5bab6">Penyebab seseorang mengalami gangguan pencernaan, antara lain, pola makan tidak teratur. Misalnya, sering terlambat makan, kurang mengonsumsi sayur dan buah, dan kurang memperhatikan gizi makanan. Salah satu upaya menjaga saluran pencernaan agar tetap sehat, makanlah dengan pola makan sehat dan seimbang.
    </string>
    <string name="isi6bab6">Teks tersebut merupakan contoh lain dari teks persuasif. Di dalamnya juga terkandung bujukan. Hal itu sebagaimana yang tampak pada bagian  akhir, yakni "makanlah dengan pola makan sehat dan seimbang". Namun, sebelum menyampaikan bujukan itu, penulis mengemukakan sejumlah pendapat yang bisa mengantarkan pembaca untuk mau mengikuti bujukannya.
\n\nDengan demikian, di dalam teks persuasif terdapat pendapat pendapat seperti halnya di dalam teks argumentatif. Mungkin pula tersaji fakta. Di dalam teks persuasif, baik pendapat ataupun fakta digunakan dalam rangka memengaruhi pembaca agar mau mengikuti bujukan-bujukan itu.
\n\nPerhatikan pula cuplikan teks berikut!
    </string>
    <string name="isi7bab6">Sejak terjadinya bencana gempa bumi dan gelombang tsunami itu sering kali bencana tersebut dijadikan sarana untuk memungut uang dari masyarakat. Banyak organisasi atau kelompok orang tak bertanggung jawab meminta sumbangan untuk korban bencana tersebut. Mereka beroperasi di atas bus kota, lampu merah, dan pinggir-pinggir jalan lainnya yang mengatasnamakan dinas sosial. Oleh karena itu, masyarakat harus berhati-hati terhadap ulah oknum tersebut. Kami organisasi Sosial Peduli Kasih, tidak pernah meminta sumbangan dengan cara-cara seperti itu.
    </string>
    <string name="isi8bab6">Teks tersebut juga menyampaikan bujukan atau imbauan. Perhatikanlah kalimat terakhir teks tersebut. Penulis mengimbau masyarakat untuk berhati- hati terhadap ulah oknum yang meminta sumbangan dengan mengatasnamakan korban bencana alam. Sebelum itu, penulis menyampaikan sejumlah fakta yang bisa meyakinkan dan memengaruhi pembaca dengan bujukan-bujukannya itu. Pernyataan-pernyataan yang dimaksud di dalam contoh tersebut sebagai berikut.
\n\na.	Sejak terjadinya bencana gempa bumi dan gelombang tsunami itu sering kali bencana tersebut dijadikan sarana untuk memungut uang dari masyarakat.
\n\nb.	Banyak organisasi atau kelompok orang tak bertanggung jawab meminta sumbangan untuk korban bencana tersebut.
\n\nc.	Mereka beroperasi di atas bus kota, lampu merah, dan pinggir-pinggir jalan lainnya yang mengatasnamakan dinas sosial.
\n\nDi samping menggunakan fakta, penulis dapat pula menggunakan pendapat para ahli. Juga bisa menggunakan cara lainnya yang sekiranya dapat memperkuat ajakan atau imbauannya itu.
    </string>
    <string name="isi9bab6">Di dalam pelajaran sebelumnya telah kamu ketahui bahwa teks persuasi ditandai oleh kehadiran ajakan. Adapun yang dimaksud dengan ajakan adalah kata-kata atau perbuatan untuk mengajak; undangan. Ajakan dapat pula berarti anjuran, imbauan, dan sebagainya (untuk melakukan sesuatu).
\n\nSeperti di dalam cuplikan-cuplikan di atas bahwa suatu ajakan ditandai dengan kata-kata harus, hendaknya, sebaiknya, usahakanlah, jangan, hindarilah, dan sejenisnya. Di samping itu, tidak sedikit pula teks persuasi yang menyampaikan ajakannya itu secara tersirat. Hal itu seperti yang tampak pada cuplikan teks di awal-awal bab ini. Walaupun tidak dinyatakan secara langsung, pembaca tetap akan memahami bahwa teks itu berisi suatu ajakan atau bujukan agar pembacanya itu berbuat sesuatu sesuai dengan harapan penulisnya.
    </string>
    <string name="isibab9">Membaca merupakan kegiatan wajib bagi seorang pelajar. Kamu setuju dengan pernyataan itu, pastinya! Bacaan itu tidak hanya berupa buku pelajaran, tetapi masih banyak sumber-sumber lain yang bisa kita baca: bisa buku kumpulan cerpen, novel, di samping e-book, dan buku-buku ilmu pengetahuan populer.
\n\nTiada hari tanpa membaca karena membaca merupakan jalan lurus menuju manusia cerdas dan berjaya. Dengan membaca kamu bisa memperoleh banyak wawasan dan pengetahuan. Dengan membaca kamu pun bisa memperoleh hiburan dan kesenangan.
    </string>
    <string name="isi2bab9">Buku (bacaan) dapat dibagi ke dalam dua jenis, yakni buku fiksi dan nonfiksi.
\n\na.	Buku fiksi, contohnya kumpulan dongeng, cerpen, novel, dan drama.
\n\nb.	Buku nonfiksi, contohnya buku pelajaran, ilmiah populer, dan biografi.
\n\nSeseorang membaca buku fiksi pada umumnya untuk memperoleh hiburan ataupun kesenangan. Coba, kamu pikirkan kembali, apa yang kamu inginkan ketika membaca novel? Ketika itu akan muncul berbagai perasaan yang muncul seiring dengan perjalanan hidup yang dialami tokoh novel tersebut.
\n\nTidak demikian halnya ketika kamu membaca buku pelajaran, buku ilmiah, ataupun buku nonfiksi lainnya; yang kamu peroleh ketika itu adalah sejumlah informasi, pengetahuan, ataupun wawasan.
    </string>
    <string name="isi3bab9">Adapun yang dimaksud dengan indeks adalah daftar kata atau istilah penting yang terdapat dalam buku cetakan. Indeks biasanya terdapat pada halaman akhir dan tersusun menurut abjad. Seperti yang tampak pada contoh di atas bahwa, kata-kata yang tercantum di dalamnya dimulai dengan kata alfabetis (A) dan di akhir dengan kata wawancara (W). Daftar kata seperti itu berfungsi untuk memberikan informasi mengenai halaman tempat kata atau istilah dalam buku itu.
    \n\nPerhatikan contoh lain sebagai berikut!
        \n\nikhtisar buku, 61, 64-64
\n\nkamera 19-20
\n\nBerdasarkan indeks tersebut dapat diketahui bahwa kata-kata ikhitisar buku dijumpai pada halaman 61, 64–65. Adapun istilah konsentrasi digunakan dalam halaman 49–53. Dengan demikian, indeks sangat membantu pembaca dalam menelusuri suatu kata atau istilah dalam suatu buku.
    </string>
    <string name="isi4bab9">Kamu sudah belajar memanfaatkan indeks saat menemukan informasi- informasi penting yang ada di dalam suatu buku. Hal lain yang perlu kamu kuasai adalah membuat catatan tentang isi buku berdasarkan kata/istilah-istilah dalam indeksnya itu.
\n\nKamu harus dapat menentukan indeks yang pemaknaannya yang dicari. Kemudian, mencatat semua penjelasan yang ada di buku itu tentang indeks yang dimaksud. Catatlah penggunaan kata/istilah-istilah (indeks) yang kita anggap penting.
\n\nSusunlah catatan secara kreatif. Kamu dapat membubuhinya dengan pensil berwarna, gambar-gambar, dan hal-hal menarik lainnya. Perlu diingat, catatan itu mudah diingat dan lebih semangat untuk mempelajarinya.
    \n\nPerhatikan contoh catatan di bawah ini!
        \n\nTeknik Mencatat Informasi dalam Buku
\n\nt	Tentukan	kata/istilah	yang	hendak	dicari	penjelasan/ penggunaannya.
\n\nt	Carilah halaman penggunaan kata/istilah itu sesuai dengan yang tertera pada halaman indeknya itu.
\n\nt	Pahami penggunaan kata/istilah itu pada halaman yang dimaksud.
\n\nt	Catalah bagian-bagian pentingnya dari penggunaan kata/ istilah itu.
    </string>
</resources>